--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.1",
+    "izitoast": "^1.4.0",
+    "swiper": "^11.2.5",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
