project settings fix

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "accordion-js": "^3.4.0",
     "axios": "^1.8.1",
     "izitoast": "^1.4.0",
     "swiper": "^11.2.5",
